src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <description>Comments for sales reps to include more details on why a lead is unqualified</description>
        <inlineHelpText>More detail on why the lead is Unqualified</inlineHelpText>
        <label>Unqualified Reason Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <description>Used to store other details. Long text field.</description>
        <inlineHelpText>Used to store other details. Long text field.</inlineHelpText>
        <label>Other Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <label>Owner Phone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>Owner:User.Department</formula>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Change_Reason__c</fullName>
        <description>Used by Acquisition team when calling leads from the power dialer. Validation rule makes it required when Request Ownership = TRUE</description>
        <inlineHelpText>This field is required in order to submit an ownership change request</inlineHelpText>
        <label>zOwnership Change Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ownership_Change_Request_Date__c</fullName>
        <description>Used by Acquisition team when calling leads from the power dialer. Populated by workflow</description>
        <label>zOwnership Change Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ownership_Change_Requestor__c</fullName>
        <description>Used by Acquisition team when calling leads from the power dialer. Populated by workflow</description>
        <label>zOwnership Change Requestor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDE_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>design referral program field</description>
        <inlineHelpText>Has this referral been confirmed by the PDE owner of the Design Account?</inlineHelpText>
        <label>zPAR PDE Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pain_Points__c</fullName>
        <description>Current prospect pain points with existing solution</description>
        <inlineHelpText>Current prospect pain points with existing solution</inlineHelpText>
        <label>Pain Points</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>9/6/12 - changed field label from Partner Account to Partner Source to distinguish this field used by the Partner team from the Design Partner used by Conversion Sales. Left Field Name the same to keep API integrity. jw</description>
        <inlineHelpText>Designates if a partner of BigCommerce brought this lead to us</inlineHelpText>
        <label>z PAR Partner Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Engagement_Preference__c</fullName>
        <description>PAR Partner Engagement Preference</description>
        <formula>TEXT(Partner_Account__r.Engagement_Preference__c)</formula>
        <inlineHelpText>PAR Partner Engagement Preference</inlineHelpText>
        <label>z PAR Partner Engagement Preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Source_Country__c</fullName>
        <description>for reporting</description>
        <formula>Partner_Account__r.BillingCountry</formula>
        <inlineHelpText>Billing Country of the Partner Account</inlineHelpText>
        <label>zPAR Partner Source Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Source_ID__c</fullName>
        <description>Salesforce Account ID of the partner associated with the lead.</description>
        <formula>Partner_Account__r.Id</formula>
        <inlineHelpText>Salesforce Account ID of the partner associated with the lead.</inlineHelpText>
        <label>zPAR Partner Source ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Source_Owner_ID__c</fullName>
        <description>for reporting &amp; lead reassignment only</description>
        <formula>Partner_Account__r.OwnerId</formula>
        <label>z BA Partner Source Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <description>What is the client&apos;s persona? Can be updated by Hubspot or Sales rep.</description>
        <inlineHelpText>What is the client&apos;s persona? Can be updated by Hubspot or Sales rep.</inlineHelpText>
        <label>Persona</label>
        <picklist>
            <picklistValues>
                <fullName>Startup Suzy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator Owen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miderprise Marty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used for deduping</inlineHelpText>
        <label>BA Phone Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pinterest_eBook_Date__c</fullName>
        <label>z MKT Pinterest eBook Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pinterest_eBook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>z MKT Pinterest eBook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <description>For partner request web form mapping</description>
        <label>zPAR Portfolio</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pricing_Test_Group__c</fullName>
        <description>Was the most recent trial in a price test group?</description>
        <formula>IF(ISBLANK( Most_Recent_Trial__c) = FALSE,  Most_Recent_Trial__r.PricingTestGroup__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Was the most recent trial in a price test group?</inlineHelpText>
        <label>zMKT Pricing Test Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_MBA_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>mapped to MBA staging table to designate original contact on an MBA account/user</description>
        <label>zPrimary MBA Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private_SSL_Certificate__c</fullName>
        <description>For Orion</description>
        <label>zSBD Private SSL Certificate</label>
        <picklist>
            <picklistValues>
                <fullName>TRUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FALSE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <inlineHelpText>Detail on Product Closed Lost Reason</inlineHelpText>
        <label>Closed Lost Product Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Freight Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product level shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Dropshipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple ship from and to location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Order Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back in Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCM/Channel Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring billing for subscription model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Map Pricing-minimum advertised pricing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_Revenue__c</fullName>
        <description>Populated from Hubspot form. Can be updated by a Sales rep.</description>
        <inlineHelpText>Populated from Hubspot form. Can be updated by a Sales rep.</inlineHelpText>
        <label>Projected Annual Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; $50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000 - $250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250,000 - $500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500,000 - $1,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000,000 - $2,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2,000,000 - $5,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000,000 - $50,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000,000 +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Close_Date__c</fullName>
        <description>Acq team pipeline field</description>
        <label>z ACQ Projected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Value__c</fullName>
        <description>Acq pipeline field</description>
        <label>zProjected Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Provisioning_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if any subscriptions associated to this lead did not provision and are in a &quot;Pending&quot; status or if the active trial store URL is not a workable link/returns an error</inlineHelpText>
        <label>zProvisioning Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recorded_Product_Tour_Date__c</fullName>
        <label>zRecorded Product Tour Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <description>design referral program field</description>
        <inlineHelpText>Date of original referral to a Design Partner regardless of any subsequent referrals</inlineHelpText>
        <label>zPAR Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Email__c</fullName>
        <description>design partner referral process</description>
        <inlineHelpText>If the Design Partner prefers to be send leads via email, this is the address Salesforce is using based on the Design Account selection made by the sales rep</inlineHelpText>
        <label>zPAR Referral Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral_Form_URL__c</fullName>
        <description>design referral program field</description>
        <inlineHelpText>Populated once a Design Account is saved if that partner requires leads be submitted to the via their own form</inlineHelpText>
        <label>zPAR Referral Form URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Referral_Notes__c</fullName>
        <description>design referral program field</description>
        <inlineHelpText>Brief description of why this client is being referred to the designer.  If the budget field is $0, this note field is required.</inlineHelpText>
        <label>zReferral Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Submission_Type__c</fullName>
        <description>design referral program field</description>
        <formula>TEXT(Design_Account__r.Referral_Submission_Type__c)</formula>
        <inlineHelpText>If submission type is &quot;Email&quot;, Salesforce will send the referral email once the budget and design account data is populated.  If type is &quot;Form&quot;, please click the form URL and fill in the necessary information</inlineHelpText>
        <label>zReferral Submission Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_to_Hubspot__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use if you send this lead out to Hubspot</inlineHelpText>
        <label>zReferred to Hubspot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Acquisition team when calling leads from the power dialer.  Checking the box sends a request to Hass to transfer ownership to the requester and captures rep + date</description>
        <label>zRequest Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBD_Ebay_Power_User__c</fullName>
        <description>For orion</description>
        <label>zSBD Ebay Power User</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBD_Orion_Consultation_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SBD Orion Consultation Requested by Customer</description>
        <inlineHelpText>SBD Orion Consultation Requested by Customer should be check by the Sales Rep which will note an Orion client who has requested a Consultation. Consultations are only available for clients whose SBD Orion Segment = HIGH.</inlineHelpText>
        <label>zSBD Orion Consultation Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBD_Orion_Persona__c</fullName>
        <description>SBD Orion Persona</description>
        <label>zSBD Orion Persona</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Orion_Store_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate the Orion store is cancelled</description>
        <label>zSBD Orion Store Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBD_Orion_Store_GMV__c</fullName>
        <description>SBD Orion Store GMV</description>
        <inlineHelpText>SBD Orion Store GMV</inlineHelpText>
        <label>zSBD Orion Store GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBD_Orion_Trialer__c</fullName>
        <description>Indiciate Orion client that was on a free trial</description>
        <label>zSBD Orion Trialer</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Referral_ID__c</fullName>
        <inlineHelpText>SBD partner unique ID</inlineHelpText>
        <label>zSBD Referral ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Store_Count__c</fullName>
        <description>SBD Store Count</description>
        <label>zSBD Store Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBD_Store_ID_EXT__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External ID.</inlineHelpText>
        <label>SBD Indexed Store ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Store_ID__c</fullName>
        <description>SBD Store ID</description>
        <label>zSBD Store ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBD_Tenure__c</fullName>
        <description>SBD Tenure for Orion</description>
        <label>zSBD Tenure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Phone__c</fullName>
        <description>Reps are currently using, once we&apos;re on opportunities, let&apos;s wean off and encourage reps to create new contacts instead.</description>
        <label>Sales Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Notes__c</fullName>
        <label>Manager Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seen_Pricing__c</fullName>
        <description>Hubspot / Marketing testing field</description>
        <inlineHelpText>Yes = this client saw the standard pricing page when they signed up for a trial
No = they were routed to the new pricing test page and will require a PDF doc for pricing</inlineHelpText>
        <label>z MKT Seen Pricing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_Offered__c</fullName>
        <description>For partner request web form mapping</description>
        <inlineHelpText>For partner request web form mapping</inlineHelpText>
        <label>zPAR Services Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Store Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Engine Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced (eg Backoffice Integration)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <label>Skype</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage - will be retired when we move to opportunities fully.</description>
        <inlineHelpText>Stage - will be retired when we move to opportunities fully.</inlineHelpText>
        <label>zStage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Un-Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing: New Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requalified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_BD_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Strategic BD Partner account</description>
        <inlineHelpText>Lookup field to the Strategic BD Partner account</inlineHelpText>
        <label>zSBD Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategic BD Leads</relationshipLabel>
        <relationshipName>BizDev_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strategic_Partner__c</fullName>
        <description>Pulls the Strategic Partner field from the most recent trial</description>
        <formula>Most_Recent_Trial__r.Strategic_Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls the Strategic Partner field from the most recent trial</inlineHelpText>
        <label>zSBD Strategic Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportPin__c</fullName>
        <inlineHelpText>MBA account pin used to verify account access for cases</inlineHelpText>
        <label>zSupport Pin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Expiration__c</fullName>
        <description>Interspire support expiration date</description>
        <inlineHelpText>Interspire support expiration date</inlineHelpText>
        <label>zInterspire Support Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sync_with_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines whether the record should be synced with Marketo. Marketo has a filter stored for BigCommerce to only look at records with this checkbox checked.</description>
        <label>Sync with Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Take_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Take ownership workflow for the dialer</description>
        <inlineHelpText>When checked, after save, will assign the Lead to Owner if Owned by The Bigcommerce Team and set the Stage to &apos;Engaged&apos;.</inlineHelpText>
        <label>Take Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <inlineHelpText>Cold: tried to contact but no connection
Warm: connected but needs work
Hot: came in from a good source and/or is progressing towards close</inlineHelpText>
        <label>Temperature</label>
        <picklist>
            <picklistValues>
                <fullName>Cold</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a testing lead? MANUALLY POPULATED</description>
        <inlineHelpText>Is this a testing lead? MANUALLY POPULATED</inlineHelpText>
        <label>BA Testing Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timeline_to_Purchase__c</fullName>
        <description>What is the prospect&apos;s timeline to purchase?</description>
        <inlineHelpText>What is the prospect&apos;s timeline to purchase?</inlineHelpText>
        <label>Timeline to Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>Less than a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-4 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4+ months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topics_Discussed__c</fullName>
        <description>What topics did you discuss with the prospect?</description>
        <inlineHelpText>What topics did you discuss with the prospect?</inlineHelpText>
        <label>Topics Discussed</label>
        <picklist>
            <picklistValues>
                <fullName>Design/Theme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Help Driving Traffic to Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payments, Shipping, &amp; Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI/Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business growth/scalability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving Website Traffic</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Totango_Score_Test__c</fullName>
        <label>zTotango Score Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Count__c</fullName>
        <inlineHelpText>Total number of trial subscriptions associated to this lead regardless of status</inlineHelpText>
        <label>zTrial Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Expiration_Date__c</fullName>
        <formula>IF(ISBLANK( Most_Recent_Trial__c) = FALSE,  Most_Recent_Trial__r.ExpirationDate__c  , NULL)</formula>
        <label>zTrial Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Start_Date__c</fullName>
        <formula>IF(ISBLANK( Most_Recent_Trial__c) = FALSE,  Most_Recent_Trial__r.StartDate__c , NULL)</formula>
        <label>zTrial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Store_URL__c</fullName>
        <formula>IF(ISBLANK( Most_Recent_Trial__c) = FALSE,  Most_Recent_Trial__r.StoreURL__c  , NULL)</formula>
        <label>zTrial Store URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Lead type. No default set.</description>
        <inlineHelpText>Lead type. No default set.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal/BC Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer/Dev Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target (DM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Time_Zone__c</fullName>
        <inlineHelpText>Based on the State populated in the address field &quot;State/Province&quot;</inlineHelpText>
        <label>US Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Alaskan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaiian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Viewed_Offers_At__c</fullName>
        <description>For Orion. Indicates the date/time at which the client viewed the offers page.</description>
        <label>zSBD Viewed Offers At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Viewed_Offers__c</fullName>
        <description>For Orion. Indicates whether the client viewed the offers page.</description>
        <label>zSBD Viewed Offers</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WFR_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Ops to force an edit/save across multiple leads via dataloader</description>
        <inlineHelpText>Used by Ops to force an edit/save across multiple leads via dataloader</inlineHelpText>
        <label>zBA WFR Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_to_Lead_Message__c</fullName>
        <description>Container for web to lead form message from contact</description>
        <inlineHelpText>Stores web to lead form message</inlineHelpText>
        <label>Web to Lead Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Date__c</fullName>
        <description>Date of first webinar.</description>
        <label>zWebinar Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Webinar_Name__c</fullName>
        <description>think this can be deleted but ask Miles</description>
        <label>zWebinar Name</label>
        <picklist>
            <picklistValues>
                <fullName>Success Squad - Store Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Things to Boost Sales in 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Using Content to grow eCommerce Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bigcommerce Partner Program and You</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The 3 Keys to Next-Level Conversion</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Webinar_Status__c</fullName>
        <description>think this can be deleted but ask Miles</description>
        <label>zWebinar Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watched Recording</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>